--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                 <div class="col-lg-8">
                     <!-- Featured blog post-->
                     <div class="card mb-4">
-                        <a href="#!"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                        <a href="#!"><img class="card-img-top" src="/img/Create-Resource-Group.png" alt="..." /></a>
                         <div class="card-body">
                             <div class="small text-muted">January 13, 2023</div>
                             <h2 class="card-title">Creating a Resource Group in Azure with Terraform</h2>
                             <p class="card-text">A first look at using terraform to deploy resources into Azure</p>
-                            <a class="btn btn-primary" href="/blogs/Terraform_RG.html">Read more →</a>
+                            <a class="btn btn-primary" href="#!">Read more →</a>
                         </div>
                     </div>
                     <!-- Nested row for non-featured blog posts-->
